all cruds done and checked
