# api/docs/swagger.json
@@ -772,8 +772,14 @@
                     },
                     {
                         "type": "string",
-                        "description": "search",
-                        "name": "search",
+                        "description": "name",
+                        "name": "name",
+                        "in": "query"
+                    },
+                    {
+                        "type": "integer",
+                        "description": "barcode",
+                        "name": "barcode",
                         "in": "query"
                     }
                 ],
@@ -1304,8 +1310,14 @@
                     },
                     {
                         "type": "string",
-                        "description": "search",
-                        "name": "search",
+                        "description": "from-amount",
+                        "name": "from-amount",
+                        "in": "query"
+                    },
+                    {
+                        "type": "string",
+                        "description": "to-amount",
+                        "name": "to-amount",
                         "in": "query"
                     }
                 ],
